// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer custom font size 1`] = `
.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 12px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 i.margin-left {
  margin-left: 8px;
}

.c4 i.margin-right {
  margin-right: 8px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c2 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png);
  background-size: cover;
  background-position: center;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={12}
  >
    <div
      className="image c2"
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
    />
    <div
      className="text"
    >
      <div
        className="c3"
        size={12}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c4"
        disabled={false}
        size={12}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots Footer with one action 1`] = `
.c6 {
  position: relative;
  display: inline-block;
}

.c6 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c6 .appear-enter {
  opacity: 0;
}

.c6 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c6 .appear-exit {
  opacity: 1;
}

.c6 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c7 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c7:focus {
  box-shadow: none;
}

.c7:hover .icon,
.c7:focus .icon {
  color: white;
}

.c7 > .icon {
  color: rgba(0,0,0,0.32);
}

.c7:hover,
.c7:focus {
  color: #3498db;
  border-color: #3498db;
}

.c7:hover > .icon,
.c7:focus > .icon {
  color: #3498db;
}

.c7:disabled,
.c7:disabled .icon,
.c7:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c7:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 i.margin-left {
  margin-left: 8px;
}

.c4 i.margin-right {
  margin-right: 8px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c2 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png);
  background-size: cover;
  background-position: center;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .text > :first-child {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={16}
  >
    <div
      className="image c2"
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
    />
    <div
      className="text"
    >
      <div
        className="c3"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c4"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <span
          onClick={[Function]}
        >
          Get support
        </span>
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <button
        className="c7"
        disabled={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        size="SMALL"
        type="NEUTRAL"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Footer with two actions 1`] = `
.c6 {
  position: relative;
  display: inline-block;
}

.c6 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c6 .appear-enter {
  opacity: 0;
}

.c6 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c6 .appear-exit {
  opacity: 1;
}

.c6 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c7 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c7:focus {
  box-shadow: none;
}

.c7:hover .icon,
.c7:focus .icon {
  color: white;
}

.c7 > .icon {
  color: rgba(0,0,0,0.32);
}

.c7:hover,
.c7:focus {
  color: #3498db;
  border-color: #3498db;
}

.c7:hover > .icon,
.c7:focus > .icon {
  color: #3498db;
}

.c7:disabled,
.c7:disabled .icon,
.c7:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c7:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #ff4411;
  padding: 0 16px;
}

.c8 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c8:focus {
  box-shadow: none;
}

.c8:hover .icon,
.c8:focus .icon {
  color: white;
}

.c8:hover {
  background-color: #dd3311;
}

.c8:focus {
  background-color: #dd3311;
}

.c8:disabled,
.c8:disabled .icon,
.c8:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c8:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 i.margin-left {
  margin-left: 8px;
}

.c4 i.margin-right {
  margin-right: 8px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c2 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png);
  background-size: cover;
  background-position: center;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .text > :first-child {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={16}
  >
    <div
      className="image c2"
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
    />
    <div
      className="text"
    >
      <div
        className="c3"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c4"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <span
          onClick={[Function]}
        >
          Get support
        </span>
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <button
        className="c7"
        disabled={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        size="MEDIUM"
        type="NEUTRAL"
      >
        Cancel
      </button>
    </div>
    <div
      className="c6"
    >
      <button
        className="c8"
        disabled={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        size="MEDIUM"
        type="PRIMARY"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Footer without actions 1`] = `
.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 i.margin-left {
  margin-left: 8px;
}

.c4 i.margin-right {
  margin-right: 8px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c2 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png);
  background-size: cover;
  background-position: center;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .text > :first-child {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={16}
  >
    <div
      className="image c2"
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
    />
    <div
      className="text"
    >
      <div
        className="c3"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c4"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots Footer without image 1`] = `
.c5 {
  position: relative;
  display: inline-block;
}

.c5 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c5 .appear-enter {
  opacity: 0;
}

.c5 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c5 .appear-exit {
  opacity: 1;
}

.c5 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c6 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c6:focus {
  box-shadow: none;
}

.c6:hover .icon,
.c6:focus .icon {
  color: white;
}

.c6 > .icon {
  color: rgba(0,0,0,0.32);
}

.c6:hover,
.c6:focus {
  color: #3498db;
  border-color: #3498db;
}

.c6:hover > .icon,
.c6:focus > .icon {
  color: #3498db;
}

.c6:disabled,
.c6:disabled .icon,
.c6:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c6:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c3 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c3 i.margin-left {
  margin-left: 8px;
}

.c3 i.margin-right {
  margin-right: 8px;
}

.c3 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > a {
  color: inherit;
}

.c3:hover {
  color: #3498db;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .text > :first-child {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c4 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={16}
  >
    <div
      className="text"
    >
      <div
        className="c2"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="c3"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <button
        className="c6"
        disabled={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        size="SMALL"
        type="NEUTRAL"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Footer without link 1`] = `
.c5 {
  position: relative;
  display: inline-block;
}

.c5 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c5 .appear-enter {
  opacity: 0;
}

.c5 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c5 .appear-exit {
  opacity: 1;
}

.c5 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c6 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c6:focus {
  box-shadow: none;
}

.c6:hover .icon,
.c6:focus .icon {
  color: white;
}

.c6 > .icon {
  color: rgba(0,0,0,0.32);
}

.c6:hover,
.c6:focus {
  color: #3498db;
  border-color: #3498db;
}

.c6:hover > .icon,
.c6:focus > .icon {
  color: #3498db;
}

.c6:disabled,
.c6:disabled .icon,
.c6:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c6:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  color: #2f313a;
  text-align: left;
}

.c2 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png);
  background-size: cover;
  background-position: center;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .text > :first-child {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c4 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
    size={16}
  >
    <div
      className="image c2"
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
    />
    <div
      className="text"
    >
      <div
        className="c3"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <button
        className="c6"
        disabled={false}
        onClick={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        size="SMALL"
        type="NEUTRAL"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;
